# faker

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  cleanup.py  docker-compose.yml  mypy.ini  pyproject.toml  setup.py
examples/: README.md  config.yaml  config_customer_support.yaml  config_financial.yaml
src/faker/: __init__.py  __main__.py  commands.py  generator.py  llm.py  logging_service.py  models.py  response_parser.py  templates.py
tests/: test_models.py
